Add notification system

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "slim/slim": "^2.6",
         "erusev/parsedown": "dev-master",
-        "mailgun/mailgun-php": "~1.7.2"
+        "mailgun/mailgun-php": "~1.7.2",
+        "fire015/flintstone": "1.*"
     }
 }
